feat: 新增诗歌瀑布视图

--- a/src/App.less
+++ b/src/App.less
@@ -1,6 +1,26 @@
+@font-face {
+  font-family: DFPSongW9;
+  src: url('./assets/font/DFPSongW9-GB5.ttf');
+}
+
+@font-face {
+  font-family: '仿宋';
+  src: url('./assets/font/仿宋.ttf');
+}
+
+@font-face {
+  font-family: '华康标题宋W9';
+  src: url('./assets/font/华康标题宋W9.TTF');
+}
 .App {
   width: 100vw;
   height: 100vh;
   display: flex;
   flex-direction: row;
+
+  font-family: '华康标题宋W9' !important;
+  background-image: url('./assets/images/background.jpg');
+  background-repeat: no-repeat;
+  background-position: center 0;
+  background-size: cover;
 }
