--- a/src/pages/ForceGraphView/index.less
+++ b/src/pages/ForceGraphView/index.less
@@ -2,4 +2,22 @@
   width: 100%;
   height: 100%;
   background-size: cover;
+  display: flex;
+
+  .img {
+    width: 124px;
+    height: 527px;
+    margin-left: 20px;
+    margin-top: 100px;
+  }
+
+  .force_content {
+    flex: 1 0 0;
+    min-height: 0;
+
+    .force_svg {
+      width: 100%;
+      height: 100%;
+    }
+  }
 }
