feat: add radar chart

--- a/src/App.less
+++ b/src/App.less
@@ -18,9 +18,13 @@
   display: flex;
   flex-direction: row;
 
-  font-family: '华康标题宋W9' !important;
   background-image: url('./assets/images/background.jpg');
   background-repeat: no-repeat;
   background-position: center 0;
   background-size: cover;
+}
+
+* {
+  font-family: '华康标题宋W9' !important;
+  font-weight: 500 !important;
 }
