--- a/src/pages/WritePoetryView/FirstView/index.less
+++ b/src/pages/WritePoetryView/FirstView/index.less
@@ -68,4 +68,21 @@
     flex: 1 0 0;
     display: flex;
   }
+
+  .radar_buttons {
+    height: 75px;
+    display: flex;
+    justify-content: space-around;
+
+    .radar_button {
+      width: 100px;
+      height: 44px;
+      border-radius: 5px;
+      background: #795548;
+      font-size: 17px;
+      color: white;
+      border: 0px;
+      cursor: pointer;
+    }
+  }
 }
