feat: cell component finished

--- a/src/pages/WritePoetryView/SecondView/index.less
+++ b/src/pages/WritePoetryView/SecondView/index.less
@@ -11,4 +11,54 @@
     font-size: 36px;
     line-height: 36px;
   }
+
+  .menu_container {
+    margin-top: 16px;
+    height: 40px;
+    display: flex;
+    justify-content: space-between;
+
+    .modify_suggestion {
+      font-family: '华康标题宋W9' !important;
+      font-size: 18px;
+      color: rgba(0, 0, 0, 0.65);
+      background-color: transparent;
+      display: flex;
+      align-items: center;
+
+      .text {
+        margin-right: 4px;
+      }
+    }
+
+    .ant-select-selector {
+      background-color: transparent;
+      border: none;
+      font-family: '华康标题宋W9' !important;
+      font-size: 16px;
+      color: rgba(0, 0, 0, 0.65);
+    }
+  }
+
+  .reset {
+    font-family: '华康标题宋W9' !important;
+    font-size: 18px;
+    color: rgba(0, 0, 0, 0.65);
+    display: flex;
+    align-items: center;
+
+    .text {
+      margin-left: 4px;
+    }
+  }
+
+  .grids {
+    flex: 1 0 0;
+    padding: 18px;
+
+    .row {
+      display: flex;
+      justify-content: space-between;
+    }
+  }
 }
