feat: system score

--- a/src/pages/WritePoetryView/SecondView/index.less
+++ b/src/pages/WritePoetryView/SecondView/index.less
@@ -62,4 +62,33 @@
       justify-content: space-between;
     }
   }
+
+  .system_score {
+    display: flex;
+    font-size: 16px;
+    justify-content: space-between;
+
+    .desc {
+      display: flex;
+      width: 40px;
+    }
+  }
+
+  .share_buttons {
+    margin-top: 18px;
+    height: 75px;
+    display: flex;
+    justify-content: space-around;
+
+    .share_button {
+      width: 100px;
+      height: 44px;
+      border-radius: 5px;
+      background: #795548;
+      font-size: 16px;
+      color: white;
+      border: 0px;
+      cursor: pointer;
+    }
+  }
 }
