feat: add brush

--- a/src/pages/WritePoetryView/SecondView/index.less
+++ b/src/pages/WritePoetryView/SecondView/index.less
@@ -57,6 +57,19 @@
     padding: 18px 36px;
     margin-top: 16px;
 
+    .gridsRow {
+      position: relative;
+    }
+
+    .svg {
+      position: absolute;
+      z-index: 1;
+      left: -10px;
+      top: -10px;
+      width: calc(100% + 20px);
+      height: 65px;
+    }
+
     .row {
       display: flex;
       justify-content: space-between;
