--- a/src/pages/WritePoetryView/SecondView/Cell/index.less
+++ b/src/pages/WritePoetryView/SecondView/Cell/index.less
@@ -9,6 +9,8 @@
     background-size: 100% 100%;
     font-size: 24px;
     color: black;
+    position: relative;
+    z-index: 2;
 
     input {
       width: 45px;
