feat: 逐字推敲视图

--- a/src/pages/WritePoetryView/SecondView/Cell/index.less
+++ b/src/pages/WritePoetryView/SecondView/Cell/index.less
@@ -23,6 +23,7 @@
         outline: none;
       }
     }
+    
   }
 
   .rhythm {
@@ -34,5 +35,18 @@
       width: 45px;
       height: 45px;
     }
+  }
+
+}
+#wordAnimation {
+  animation: fade 1.2s ease-in-out;
+}
+
+@keyframes fade {
+  0% {
+      opacity: 0;
+  }
+  100% {
+      opacity: 1;
   }
 }
