--- a/src/pages/WritePoetryView/FirstView/index.less
+++ b/src/pages/WritePoetryView/FirstView/index.less
@@ -8,7 +8,7 @@
 .first_view {
   width: 100%;
   height: 100%;
-  padding: 36px 48px;
+  padding: 36px 48px 12px;
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
@@ -22,7 +22,7 @@
   .sentence_select {
     display: flex;
     justify-content: space-between;
-    padding: 18px 0 36px;
+    padding: 18px 24px 36px;
   }
 
   .emotion_select {
@@ -80,7 +80,7 @@
       height: 44px;
       border-radius: 5px;
       background: #795548;
-      font-size: 16px;
+      font-size: 24px;
       color: white;
       border: 0px;
       cursor: pointer;
