--- a/src/pages/WritePoetryView/SecondView/index.less
+++ b/src/pages/WritePoetryView/SecondView/index.less
@@ -1,7 +1,7 @@
 .second_view {
   width: 100%;
   height: 100%;
-  padding: 36px 48px;
+  padding: 36px 48px 12px;
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
@@ -59,6 +59,10 @@
 
     .gridsRow {
       position: relative;
+
+      &:not(:first-child) {
+        margin-top: 18px;
+      }
     }
 
     @offset_x: 55px;
@@ -81,6 +85,7 @@
     display: flex;
     font-size: 16px;
     justify-content: space-between;
+    padding: 0 48px;
 
     .desc {
       display: flex;
@@ -99,7 +104,7 @@
       height: 44px;
       border-radius: 5px;
       background: #795548;
-      font-size: 16px;
+      font-size: 24px;
       color: white;
       border: 0px;
       cursor: pointer;
