--- a/src/pages/WritePoetryView/ThirdView/index.less
+++ b/src/pages/WritePoetryView/ThirdView/index.less
@@ -13,7 +13,7 @@
   }
 
   .candidates {
-    margin-top: 12px;
+    margin-top: 0px;
     margin-bottom: 48px;
     height: 240px;
     display: flex;
@@ -35,7 +35,7 @@
     }
 
     .words {
-      margin-top: 24px;
+      margin-top: 54px;
       width: 72px;
       font-weight: 500;
       color: rgba(0, 0, 0, 0.36);
@@ -45,6 +45,8 @@
       .word {
         margin-bottom: 12px;
         font-size: 18px;
+        display: flex;
+        justify-content: center;
 
         &:hover {
           color: black;
