--- a/src/pages/WritePoetryView/ThirdView/Lower/index.less
+++ b/src/pages/WritePoetryView/ThirdView/Lower/index.less
@@ -3,9 +3,12 @@
   .lowerSvg {
     width: 100%;
     height: 100%;
-    margin-top: 20px
+    margin-top: 20px;
   }
-  text{
+  text {
     cursor: pointer;
+  }
+  .circle {
+    background-image: url('../../../../assets/images/black.png');
   }
 }
